# misis2024s-21-02-koda-v-d

./: .build.bat  .gitignore  CMakeLists.txt  status.md
prj.cw/: CMakeLists.txt
prj.cw/cw/: CMakeLists.txt  cw.cpp  main.cpp
prj.cw/cw/headers/: MeanShift.hpp  Point5D.hpp
prj.cw/cw/images/: SI_json.json
prj.cw/cw/src/: MeanShift.cpp  Point5D.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: README.md  lab01.cpp
prj.lab/lab02/: README.md  lab02.cpp
prj.lab/lab03/: README.md  lab03.cpp
prj.lab/lab04/: README.md  lab04.cpp
prj.lab/lab05/: README.md  lab05.cpp
prj.lab/lab08/: README.md  lab08.cpp
prj.lab/lab09/: README.md  lab09.cpp
